--- a/package.json
+++ b/package.json
@@ -67,5 +67,5 @@
     "@types/react-router-dom": "^5.3.3",
     "@types/styled-components": "^5.1.26"
   },
-  "homepage": "https://urfriders.github.io/trello"
+  "homepage": "https://urfriders.github.io/trello/"
 }
